--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="navigation py-2">
+    <header class="navigation sticky-top py-2 bg-light shadow">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">Bootstrap</a>
@@ -80,7 +80,7 @@
                 <img height="50" src="./img/tnw-logo.svg" alt="">
             </div>
         </section>
-        <section id="feature">
+        <section id="feature" class="my-4">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 col-md-12">
